fixed social item sizes on smaller screens.

--- a/assets/css/custom-widths.styl
+++ b/assets/css/custom-widths.styl
@@ -29,7 +29,8 @@
 		div.desc
 			width 59%
 
-		div.shop
+		div.shop,
+		div.social
 			clear both
 			display block
 			padding .5em 0 0
@@ -38,6 +39,10 @@
 
 			a
 				float none
+		
+		div.social ul li a img
+			width 10%
+			height 10%
 
 	#images ul li
 		width 30%
